k8s/base/deployment-goo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goo
  namespace: goo-prod
  labels: { app: goo }
spec:
  replicas: 1
  selector:
    matchLabels: { app: goo }
  template:
    metadata:
      labels: { app: goo }
    spec:
      containers:
        - name: goo
          image: ghcr.io/ogrodje/goo:0.0.6
          command: [ "server", "--start" ]
          ports: [ { containerPort: 7777 }, { containerPort: 7778 } ]
          volumeMounts:
            - name: playwright-cache
              mountPath: /root/.cache/ms-playwright
          livenessProbe:
            httpGet:
              path: /
              port: 7777
            initialDelaySeconds: 45
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 7777
            initialDelaySeconds: 20
            periodSeconds: 50

      volumes:
        - name: playwright-cache
          persistentVolumeClaim:
            claimName: playwright-cache-pvc
