k8s/base/deployment-keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: goo-prod
  labels: { app: keycloak }
spec:
  replicas: 1
  selector: { matchLabels: { app: keycloak } }
  template:
    metadata: { labels: { app: keycloak } }
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak
          ports: [ { containerPort: 8080 } ]
          args: [
            "start",
            "--metrics-enabled=true",
            "--proxy-headers=xforwarded",
            "--hostname-strict=false",
            "--http-enabled=true",
            "--hostname-debug=true",
            "--health-enabled=true",
          ]
