k8s/base/deployment-koofr-watch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koofr-watch
  namespace: goo-prod
  labels: { app: koofr-watch }
spec:
  replicas: 1
  selector:
    matchLabels: { app: koofr-watch }
  template:
    metadata:
      labels: { app: koofr-watch }
    spec:
      containers:
        - name: koofr-watch
          image: ghcr.io/otobrglez/koofr-watch
          ports: [ { containerPort: 4446 } ]
          resources:
            limits:
              memory: "300Mi"
            requests:
              memory: "200Mi"
