k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goo-service
  namespace: goo-prod
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "7778"
    prometheus.io/path: "/metrics"
spec:
  selector: { app: goo }
  ports:
    - name: http
      port: 80
      targetPort: 7777
    - name: metrics
      port: 7778
      targetPort: 777238
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: goo-prod
spec:
  selector: { app: keycloak }
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
