k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goo-short-ingress
  namespace: goo-prod
  labels:
    version: "1"
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: goo.ogrodje.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goo-service
                port:
                  number: 80
